- Bug #2861: Removed the nested container css class in the skeleton application views (Qiang)
- Bug #2915: Fixed client validation in CCompareValidator to compare numbers instead of strings (mdomba)
- Bug #2932: CAuthItem::getType() returns string while using CDbAuthManager (Sam Dark)
- Bug #2999: CSort::getDirections, error when array is passed via $_GET (Sam Dark)
- Bug #3029: Fixed the bug that empty items was not hidden when CMenu::hideEmptyItems is true (mdomba)
- Chg: Upgraded JQuery UI to 1.8.16 (Sam Dark)
- Chg: Upgraded jQuery to 1.7.1 (Sam Dark,mdomba)
- Chg: Upgraded CMaskedTextField jQuery plugin (Masked Input) to 1.3, added minified version (Sam Dark)
- Chg: Reverted back the changes made to fix issue 2284 (Qiang)
- Chg #2647: Fixed inconvenient way of defining through relation (creocoder, Sam Dark)
- Chg #2951: Removed CConfiguration::createObject, CController::paginate and CHtml::getActiveId deprecated since 1.0.x (Sam Dark)
- Enh #2029: Added scope support to Model::relations() (creocoder, Sam Dark)
- Enh #2334: CHttpRequest::getPathInfo() now properly decodes both UTF-8 and ISO-8859-1 encoded URIs (Sam Dark)
- Enh #2387: Numeric keys are now displayed in error/exception stacktrace call argument if array isn't 0..X indexed (Sam Dark)
- Enh #2602: Better error handling in CHttpSession::open() when using PHP <5.3.0 (Sam Dark)
- Enh #2604: CArrayDataProvider::keyField can now be set to false to use keys from $rawData array instead of a named keyField (creocoder, Sam Dark)
- Enh #2637: Related table alias set dynamically in relational query is now available in the scopes of related model (creocoder, Sam Dark)
- Enh #2646, #2706: Added ability to join on a specific keys (creocoder, Sam Dark)
- Enh #2654: Enhanced CUrlManager::addRules() by allowing new rules to be inserted in front of the existing rules (Qiang)
- Enh #2717: Extracted MigrateCommand::createMigrationHistoryTable method from MigrateCommand::getMigrationHistory (Sam Dark)